<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tvTournamentName" android:text="@string/tournament_name"></TextView>
        <EditText android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/etTournamentName">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:id="@+id/tvDate" android:layout_height="wrap_content" android:text="@string/blank"></TextView>
        <Button android:layout_width="wrap_content" android:id="@+id/bDate" android:layout_height="wrap_content" android:text="@string/change_date"></Button>
    </LinearLayout>
    <Button android:id="@+id/bSave" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save"></Button>
    
</LinearLayout>
