<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="horizontal">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="match_parent" android:weightSum="1" android:baselineAligned="false">
            <TextView android:layout_width="wrap_content" android:id="@+id/tvDate" android:layout_height="wrap_content" android:text="@string/blank"></TextView>
            <Button android:id="@+id/bDate" android:layout_width="104dp" android:layout_height="wrap_content" android:text="@string/change_date" android:layout_weight="0.22"></Button>
        </LinearLayout>
        <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout9">
            <TableLayout android:id="@+id/tableLayout1" android:layout_height="match_parent" android:layout_width="wrap_content">
                <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
                	<TextView android:id="@+id/tvAtBats" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/at_bats" android:layout_marginLeft="20dip"></TextView>

                	<Spinner
                	    android:id="@+id/spAtBats"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                    <TextView android:id="@+id/tvSingles" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:text="@string/singles"></TextView>

                    <Spinner
                	    android:id="@+id/spSingles"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                </TableRow>
                <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/tvDoubles" android:text="@string/doubles" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content"></TextView>

                    <Spinner
                	    android:id="@+id/spDoubles"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                    <TextView android:id="@+id/tvTriples" android:text="@string/triples" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content"></TextView>

                    <Spinner
                	    android:id="@+id/spTriples"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                </TableRow>
                <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/tvHomeRuns" android:text="@string/homeruns" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content"></TextView>

                    <Spinner
                	    android:id="@+id/spHomeRuns"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                    <TextView android:id="@+id/tvRuns" android:text="@string/runs" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content"></TextView>

                    <Spinner
                	    android:id="@+id/spRuns"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                </TableRow>
                <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/tvRBIs" android:text="@string/rbis" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content"></TextView>

                    <Spinner
                	    android:id="@+id/spRBIs"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content" android:text="@string/walks" android:id="@+id/tvWalks"></TextView>

                    <Spinner
                	    android:id="@+id/spWalks"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                </TableRow>
                <TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/tvStrikeOuts" android:text="@string/strikeouts" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content"></TextView>

                    <Spinner
                	    android:id="@+id/spStrikeOuts"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                    <TextView android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content" android:text="@string/sacrifices" android:id="@+id/tvSacs"></TextView>

                    <Spinner
                	    android:id="@+id/spSacs"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                </TableRow>
                <TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:id="@+id/tvROE" android:text="@string/reachonerror" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content"></TextView>

                    <Spinner
                	    android:id="@+id/spROE"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                    <TextView android:id="@+id/tvFC" android:text="@string/fielderschoice" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_marginLeft="20dip" android:layout_width="wrap_content"></TextView>

                    <Spinner
                	    android:id="@+id/spFC"
                	    android:layout_width="50dp"
                	    android:layout_height="40dp"
                	    android:layout_marginLeft="20dip"
                	    android:layout_weight="1"
                	    android:background="@drawable/spinner" />
                </TableRow>
             </TableLayout>
        </LinearLayout>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:id="@+id/bSave"></Button>
            <requestFocus></requestFocus>
        <ListView android:id="@android:id/list" android:layout_height="wrap_content" android:layout_width="match_parent"></ListView>
    
    </LinearLayout>
 </LinearLayout>
