<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tvLeagueName" android:text="@string/league_name"></TextView>
        <EditText android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/etLeagueName">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_height="wrap_content" android:id="@+id/tvDescription" android:text="@string/description" android:layout_width="wrap_content"></TextView>
        <EditText android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/etDescription"></EditText>
    </LinearLayout>
    <Button android:id="@+id/bSave" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save"></Button>
    
</LinearLayout>
